force-app/main/default/objects/SPEN_Loan__c/SPEN_Loan__c.object-meta.xml
<CustomObject>
    <label>Loan</label>
    <nameField>
        <displayFormat>LN-{0000}</displayFormat>
        <label>Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>