force-app/main/default/objects/SPEN_Loan__c/fields/SPEN_Case__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case__c</fullName>
    <description>Master Case lookup field created as part of CRMD-5580</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Loan</relationshipLabel>
    <relationshipName>Loan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>