force-app/main/default/objects/SPEN_Loan__c/fields/SPEN_DateLoanCollected__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateLoanCollected__c</fullName>
    <description>Created as part of CRMD-5580</description>
    <label>Date loan collected</label>
    <type>Date</type>
</CustomField>