force-app/main/default/objects/SPEN_Loan__c/fields/SPEN_DateLoanDue__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateLoanDue__c</fullName>
    <description>Created as part of CRMD-5580</description>
    <label>Date Loan Due</label>
    <type>Date</type>
</CustomField>