force-app/main/default/objects/SPEN_Loan__c/fields/SPEN_DateLoanDueToBeCollected__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateLoanDueToBeCollected__c</fullName>
    <description>Created as part of CRMD-5580</description>
    <label>Date Loan due to be collected</label>
    <type>Date</type>
</CustomField>