force-app/main/default/objects/SPEN_Loan__c/fields/SPEN_LoanNotes__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LoanNotes__c</fullName>
    <description>Field to capture Notes for Loan as part of CRMD-5580</description>
    <label>Loan Notes</label>
    <type>TextArea</type>
</CustomField>