force-app/main/default/objects/SPEN_Loan__c/fields/SPEN_LoanStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LoanStatus__c</fullName>
    <description>To capture values as per process - part of CRMD-5580</description>
    <label>Loan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>