force-app/main/default/objects/SPEN_Loan__c/fields/SPEN_TypeOfLoan__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TypeOfLoan__c</fullName>
    <description>To Capture type of loan captured as part of CRMD - 5580</description>
    <label>Type of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Washing Machine</fullName>
            </value>
            <value>
                <fullName>Fridge</fullName>
            </value>
            <value>
                <fullName>Freezer</fullName>
            </value>
            <value>
                <fullName>Fridge Freezer</fullName>
            </value>
            <value>
                <fullName>Hotplate</fullName>
            </value>
            <value>
                <fullName>Microwave</fullName>
            </value>
            <value>
                <fullName>Fan Heater</fullName>
            </value>
            <value>
                <fullName>Portable Heaters</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>